--- a/BusBookingSystem/BusBookingSystem.csproj
+++ b/BusBookingSystem/BusBookingSystem.csproj
@@ -267,9 +267,11 @@
     <Content Include="Views\Bus\Index.cshtml" />
     <Content Include="Views\Bus\New.cshtml" />
     <Content Include="Views\Bus\Edit.cshtml" />
+    <Content Include="Views\Bus\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="ViewModels\" />
     <Folder Include="Views\Person\" />
   </ItemGroup>
   <ItemGroup>
