--- a/BusBookingSystem/BusBookingSystem.csproj
+++ b/BusBookingSystem/BusBookingSystem.csproj
@@ -203,6 +203,7 @@
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\DriverAndBusViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
@@ -271,7 +272,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="ViewModels\" />
     <Folder Include="Views\Person\" />
   </ItemGroup>
   <ItemGroup>
